--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 certifi==2023.5.7
 charset-normalizer==3.1.0
-getch
 ci-info==0.3.0
 click==8.1.3
 colorama==0.4.6
@@ -49,3 +48,4 @@ tqdm==4.65.0
 traits==6.3.2
 tzdata==2023.3
 urllib3==2.0.3
+duckduckgo-search
